--- a/.gitignore
+++ b/.gitignore
@@ -1,37 +1,144 @@
-#!/usr/bin/git
 # -*- coding: utf-8 -*-
 
 # Ignore 3rd-party dependencies
 /3rdparty/*
 # Keep the README for the listing
 !/3rdparty/README
-# vaginacore
-vgcore*
-# TES binaries
-*.tes
-# code coverage
-*.gcno
-*.gcda
-# professor data (code cov)
-*.profdata
-*.profraw
-# A-san / UB-san
-*.dSYM
 # Ignore VSCode stuff
 /.vscode/*
 # ...except #include stuffs
 !/.vscode/c_cpp_properties.json
 
-# binaries
+/data
+
 *.o
 *.obj
 *.a
-*.so*
+*.so
 *.dylib
 *.exe
 *.dll
+*.gba
+*.agb
+*.elf
+*.bin
 
-# macOS trash
+
+
+## IDA Pro
+
+*.id*
+*.nam
+*.til
+
+
+
+## VS Code
+
+/.vscode/*
+!/.vscode/c_cpp_properties.json
+
+
+
+## Emacs
+
+*~
+\#*\#
+/.emacs.desktop
+/.emacs.desktop.lock
+*.elc
+auto-save-list
+tramp
+.\#*
+
+# Org-mode
+.org-id-locations
+*_archive
+
+# flymake-mode
+*_flymake.*
+
+# eshell files
+/eshell/history
+/eshell/lastdir
+
+# elpa packages
+/elpa/
+
+# reftex files
+*.rel
+
+# AUCTeX auto folder
+/auto/
+
+# cask packages
+.cask/
+dist/
+
+# Flycheck
+flycheck_*.el
+
+# server auth directory
+/server/
+
+# projectiles files
+.projectile
+
+# directory configuration
+.dir-locals.el
+
+
+
+## vi(m)
+
+# swap
+[._]*.s[a-w][a-z]
+[._]s[a-w][a-z]
+# session
+Session.vim
+# temporary
+.netrwhist
+*~
+# auto-generated tag files
+tags
+
+
+
+## Sublime Text
+
+# cache files for sublime text
+*.tmlanguage.cache
+*.tmPreferences.cache
+*.stTheme.cache
+
+# workspace files are user-specific
+*.sublime-workspace
+
+# project files should be checked into the repository, unless a significant
+# proportion of contributors will probably not be using SublimeText
+# *.sublime-project
+
+# sftp configuration file
+sftp-config.json
+
+# Package control specific files
+Package Control.last-run
+Package Control.ca-list
+Package Control.ca-bundle
+Package Control.system-ca-bundle
+Package Control.cache/
+Package Control.ca-certs/
+bh_unicode_properties.cache
+
+# Sublime-github package stores a github token in this file
+# https://packagecontrol.io/packages/sublime-github
+GitHub.sublime-settings
+
+
+
+## macOS
+
+# General
 .DS_Store
 .AppleDouble
 .LSOverride
@@ -57,8 +164,3 @@ Icon
 Network Trash Folder
 Temporary Items
 .apdisk
-
-# Emacs
-*~
-\#*\#
-.\#*
